# pilcord

./: .gitignore  README.md  pyproject.toml
pilcord/: __init__.py  error.py  meme.py  ranking_card.py
